# forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  demo.sh  forge-demo.pack  install.sh  package.json  release.sh
.forge/: learnings.md  project.md  safety.toml
.forge/pipelines/: demo.toml
.geminix/: project.md  safety.toml
.github/workflows/: deploy-site.yml  forge-ci.yml
demo/: data.csv  main.go
replit/: .replit  README.md  setup.sh
site/: astro.config.mjs  package-lock.json  package.json
site/public/: _headers  robots.txt
site/public/.well-known/: security.txt
site/public/data/arena-replays/: api-docs.json  auth-middleware.json  auth-system.json  data-pipeline.json  db-migration.json  rate-limiter.json  refactor.json
site/src/components/: Community.astro  Download.astro  Features.astro  Hero.astro  HowToUse.svelte  Logo.svelte  Nav.svelte  Showcase.svelte  Stats.svelte  Terminal.svelte
site/src/components/3d/: DnaCanvas.svelte  DnaScene.svelte  DocsCanvas.svelte  DocsScene.svelte  ForgeCanvas.svelte  ForgeScene.svelte  SecurityCanvas.svelte  SecurityScene.svelte
site/src/components/ui/: Analytics.svelte  ArenaBattleground.svelte  DnaSidebar.svelte  InteractiveCode.svelte  SafetyEditor.svelte  SecuritySimulator.svelte  Terminal.svelte
site/src/data/arena-replays/: auth-system.json  data-pipeline.json  rate-limiter.json
site/src/layouts/: Layout.astro
site/src/lib/: events.ts
site/src/pages/: arena.astro  dna.astro  docs.astro  index.astro  security.astro
site/src/styles/: global.css
src/: agent.rs  audit.rs  backend.rs  ci_runner.rs  config.rs  diff_view.rs  domain_bootstrap.rs  domain_knowledge.rs  ember.rs  gemini.rs  jarvis.rs  learning.rs  main.rs  mcp.rs  models.rs  orchestrator.rs  packer.rs  project.rs  safety.rs  security.rs  session.rs  snapshot.rs  test_harness.rs  token_counter.rs  tools.rs  types.rs  ui.rs  voice.rs
src/integrations/: discord.rs  github.rs  google.rs  mod.rs
src/ui/: nullvoid.rs
