[package]
name = "forge"
version = "0.0.1"
edition = "2021"
description = "Multi-model terminal AI coding agent — forge code with any model"
authors = ["pratikacharya1234"]

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.11", features = ["json", "stream"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
colored      = "2"
rustyline    = "14"
clap         = { version = "3",    features = ["derive", "env"] }
anyhow       = "1"
dirs         = "5"
walkdir      = "2"
regex        = "1"
futures-util = "0.3"
glob         = "0.3"
base64       = "0.22"
toml         = "0.8"
similar      = "2"
uuid         = { version = "1", features = ["v4"] }
chrono = "0.4.38"
